# INGENIA_TEST

./: CMakeLists.txt  README.md
Exercise1/src/: Exercise1.c
Exercise2/: Exercise2.c
